--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <tr> <a href="#me_contacter" class="barnav_elem barnav_elem_right_bordered">me contacter</a> </tr>
             </table>
         </div>
-        <main id="content">
+        <div id="content">
             <div id="a_propos_de_moi">
                 <div class="text_about_myself" width="10%"> 
                     Originaire de Normandie <i>(76)</i> je vie actuellement dans l'Héraut <i>(34)</i><br><br>
@@ -38,9 +38,42 @@
                 </div>
             </div>
 
-            <div id="mes_competences">
-                <div class="text_about_my_skills"> 
-                    en construction 
+            <div id="mes_competences" class="text_about_my_skills">
+                <div class="part_title">
+                    Mes Compétences 
+                </div>
+                <div align="center"> 
+                    <table class="tab_my_skills">
+                        <tr>
+                            <th width="25%" style="padding: 1%;">
+                                <img src="image/img_html_css.png" width="25%"><br>
+                                Je suis capable de faire une page HTML avec du CSS de façon organisé et fonctionnel, avec des inscrustation d'image de lien 
+                            </th>
+                            <th width="25%" style="padding: 1%;">
+                                <img src="image/img_cisco_packet_tracer.png" width="25%"><br>
+                                Je suis capable de crée une réprésentation fonctionnel d'un réseau complexe, de programmé des Vlan.
+                            </th>
+                            <th width="25%" style="padding: 1%;">
+                                <img src="image/img_python.png" width="25%"><br>
+                                Je suis capable de crée différent programme avec les fonctions de boucles, la fonctionnalité de Web scraping mais aussi de traité des tableau ou des liste.  
+                            </th>
+                        </tr>
+                        <tr>
+                            <th width="25%" style="padding: 1%;">
+                                <img src="image/img_windows.png" width="25%"><br>
+                                Je suis capable intallé certain version de Windows via une clé bootable ou via un CD intallation, faire les configuration de base, de le mettre en réseaux et d'installer différente logiciel en fonction des besions. 
+                            </th>
+                            <th width="25%" style="padding: 1%;">
+                                <img src="image/img_ubuntu.jpeg" width="25%"><br>
+                                Je suis capable intallé certain version de linux via une clé bootable, faire les configuration de base, de le mettre en réseaux et d'installer différente logiciel en fonction des besions.
+                            </th>
+                            <th width="25%" style="padding: 1%;">
+                                <img src="image/img_office.png" width="29%">
+                                <img src="image/img-Libre-Office.webp" width="25%"><br>
+                                Je suis capable d'utilisé différent suite de traitement de text que soit pour faire du traitement de texte, faire des présentation ou faire des feuille de clacule.
+                            </th>
+                        </tr>
+                    </table>
                 </div>
             </div>
             
@@ -59,7 +92,7 @@
                         <tr><!-- ligne 1 de mon parcours-->
                             <td class="style_tab tooltip">
                                 <div>depuis 2022 : <a href="https://www.iutbeziers.fr/">Bachelor Universitaire de Technologie a l'IUT Beziers</a>
-                                    <span class="tooltiptext">durant ma formation a l'IUT Beziers, je vais passer mon Bachelor Universitaire de Technologie en Réseaux et Télécommunications.</span>
+                                    <span class="tooltiptext">durant ma formation a l'IUT Beziers, je vais passer mon Bachelor Universitaire de Technologie en Réseaux et Télécommunications. je vais apprendre a configure des poste informatique sous diférent système exploitation, la mise en réseau et l'adminstation d'un parc informatique.</span>
                                 </div>
                             </td>
                             <td></td> <!-- me permet de bien mettre mes ligne simon il le fait sur 1 colone-->
@@ -166,6 +199,10 @@
                             </a>
                         </td>
                     </table>
+            </div>
+            <div class="pied_de_page">
+                Copyright &copy; Lucas Simpol 2023 - All Rights Reserved. Dernière mise a jour le samedi 14 janvier 2023
+
             </div>
         </main>
     </body>
