finissions + corection orthographe

--- a/index.html
+++ b/index.html
@@ -30,11 +30,9 @@
         <div id="content">
             <div id="a_propos_de_moi">
                 <div class="text_about_myself" width="10%"> 
-                    Originaire de Normandie <i>(76)</i> je vie actuellement dans l'Héraut <i>(34)</i><br><br>
-                    
+                    je originaire de Normandie <i>(76)</i> et je vie actuellement dans l'Héraut <i>(34)</i> <br>
                     Je suis actuellement en cours d'obtention d'un Bachelor Universitaire de Technologie au sein de <a href="https://www.iutbeziers.fr/">l'IUT de Béziers.</a>
                     Intéressé depuis toujours dans l'informatique principalement dans le domaine des communications, je souhaite continuer dans cette voie pour me spécialiser dans ce domaine.
-                    <!-- toujour en cour de travail-->
                 </div>
             </div>
 
@@ -243,7 +241,7 @@
             }
             slides[slideIndex-1].style.display = "block";  
             dots[slideIndex-1].className += " active";
-            setTimeout(showSlides, 10000); // Change image every 2 seconds
+            setTimeout(showSlides, 10000); // Change image every 10 seconds
         }
 
     </script>
