--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div Class="titre" id="titre">
             <div class="titre_photo">
-                <img src="./image/test.jpg " alt="Image de Lucas Simpol-Augeray" height="200" width="200"> <!--a changer en fonction de l'image-->
+                <img src="./image/img_Lucas_Simpol-Augeray.jpg " alt="Image de Lucas Simpol-Augeray" height="200" width="200"> <!--a changer en fonction de l'image-->
             </div>
             <header class="titre_texte">
                 Lucas Simpol-Augeray
