--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                             </a>
                         </td>
                         <td width="33%">
-                            <a href="https://discord.com/users/257275538601672724" target="_blank" title="discord : lucas vador (H.T.T.P.S)#3148" alt="www.discord.com">
+                            <a href="https://discord.com/users/257275538601672724" target="_blank" title="discord : Lucas Simpol#3148" alt="www.discord.com">
                                 <img src="image/Logo_Discord.png" width="15%">
                             </a>
                         </td>
